# realtime-news-sentiment-pipeline

./: .gitignore  LICENSE  README.md  data.json  main.py  pipeline.py  pyproject.toml
api/: index.py
static/: index.html
